@@ -4,6 +4,16 @@ NOTE: Please place changes under the version that will be released next.
 
 ************************* Version 8.02h: *********************************
 
+BUG: (02/11/05, SMR) Zero-length arcs lose their angle information when read from ELIB.
+FIX: In input.ELIB.realizeArcs(), take angle from the "userbits".
+
+BUG: (02/11/05, SMR) "Properties" dialogs now stay on top in Windows SDI environment (Bug #202).
+FIX: In EditWindow.paint(), call "requestFocusInWindow()" instead of "requestFocus()".
+
+BUG: (02/11/05, SMR) Cross-library copy may not copy all subcells (Bug #200).
+FIX: In CircuitChanges.copyRecursively(), when recursing to a related view,
+     supress more related views for the current cell only.
+
 BUG: (02/11/05, SMR) Copying cells doesn't get arcs right.
 FIX: In Cell.copyNodeProto(), make sure the end coordinates match the PortInsts.
 
